--- a/css/main.scss
+++ b/css/main.scss
@@ -1,16 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Arapey');
+
+$primary: #F5F5F4;
+$secondary: #967B9D;
+$third: #A6A1BA;
+$forth: #8071AB;
+$fifth: #381763;
+
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
+    
     font-family: '';
 
     h1 {
         font-size: 2em;
         text-align: center;
-        margin-top: 30%;
+        padding-top: 20%;
     }
 }
 
@@ -19,6 +27,7 @@ section {
     height: 100vh;
     position: relative;
     box-sizing: border-box;
+    background-color: $third;
 
     blockquote {
         font-size: 2em;
@@ -39,6 +48,7 @@ section {
         position: absolute;
         height: 50vh;
         width: 50vh;
+        margin-right: 1vh;
     }
 
     img:nth-of-type(1) {
@@ -57,15 +67,17 @@ section {
 
 
 .sticky {
-    background: lightgrey ;
+    background-color: $secondary;
 }
 
 #box {
     width: 99vh;
-    height: 99vh;
+    height: 98vh;
     position: absolute;
-    border: 5px solid rgb(180, 45, 45);
-    margin: auto;
+    border: 6vh solid rgb(180, 45, 45);
+    
     right: 0;
+    margin-right: 1.6vh;
+    margin-top: 1vh;
 }
 
