--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0;
+  color: #F5F5F4;
   font-family: '';
 }
 
@@ -13,15 +14,61 @@ body h1 {
   font-size: 2em;
   text-align: center;
   padding-top: 20%;
+  margin-bottom: 1vh;
+  margin-top: 0vh;
+}
+
+body p {
+  text-align: center;
+  margin-top: 0;
+}
+
+body a {
+  color: white;
+  text-decoration: none;
+}
+
+body ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+body header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body header .logo {
+  font-weight: bold;
+}
+
+body header ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body header ul li a {
+  padding: 0 .6em;
+}
+
+body .wrapper {
+  padding: 1.5em;
+  margin: 0 auto;
 }
 
 section {
   padding: 0em;
-  height: 100vh;
+  height: 66vh;
   position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #A6A1BA;
+  background-color: #381763;
 }
 
 section blockquote {
@@ -33,7 +80,7 @@ section blockquote {
 
 section blockquote span {
   width: 70%;
-  background: red;
+  background: #A6A1BA;
   display: block;
   height: 5px;
   margin-top: 10px;
@@ -41,8 +88,8 @@ section blockquote span {
 
 section img {
   position: absolute;
-  height: 50vh;
-  width: 50vh;
+  height: 33vh;
+  width: 33vh;
   margin-right: 1vh;
 }
 
@@ -51,7 +98,7 @@ section img:nth-of-type(1) {
 }
 
 section img:nth-of-type(2) {
-  right: 50vh;
+  right: 33vh;
   top: 50%;
 }
 
@@ -60,16 +107,16 @@ section #anna {
 }
 
 .sticky {
-  background-color: #967B9D;
+  background-color: #8071AB;
 }
 
 #box {
-  width: 99vh;
-  height: 98vh;
+  width: 65vh;
+  height: 65vh;
   position: absolute;
-  border: 6vh solid #b42d2d;
+  border: 6vh solid purple;
   right: 0;
-  margin-right: 1.6vh;
+  margin-right: 1vh;
   margin-top: 1vh;
 }
 /*# sourceMappingURL=main.css.map */
