--- a/css/main.scss
+++ b/css/main.scss
@@ -12,22 +12,62 @@ $fifth: #381763;
 
 body {
     margin: 0;
-    
+    color: $primary;
     font-family: '';
 
     h1 {
         font-size: 2em;
         text-align: center;
         padding-top: 20%;
+        margin-bottom: 1vh;
+        margin-top: 0vh;
+    }
+
+    p {
+        text-align: center;
+        margin-top: 0;
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
+    }
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    header {
+        display: flex;
+        justify-content: space-between;
+
+        .logo {
+            font-weight: bold;
+        }
+
+        ul {
+            display: flex;
+            
+            li a {
+                padding: 0 .6em;
+            }
+        }
+    }
+
+    .wrapper {
+        padding: 1.5em;
+        margin: 0 auto;
     }
 }
 
 section {
     padding: 0em;
-    height: 100vh;
+    height: 66vh;
     position: relative;
     box-sizing: border-box;
-    background-color: $third;
+    background-color: $fifth;
 
     blockquote {
         font-size: 2em;
@@ -37,7 +77,7 @@ section {
         
         span {
             width: 70%;
-            background: red;
+            background: $third;
             display: block;
             height: 5px;
             margin-top: 10px;
@@ -46,8 +86,8 @@ section {
 
     img {
         position: absolute;
-        height: 50vh;
-        width: 50vh;
+        height: 33vh;
+        width: 33vh;
         margin-right: 1vh;
     }
 
@@ -56,7 +96,7 @@ section {
     }
 
     img:nth-of-type(2) {
-        right: 50vh;
+        right: 33vh;
         top: 50%;
     }
 
@@ -67,17 +107,15 @@ section {
 
 
 .sticky {
-    background-color: $secondary;
+    background-color: $forth;
 }
 
 #box {
-    width: 99vh;
-    height: 98vh;
+    width: 65vh;
+    height: 65vh;
     position: absolute;
-    border: 6vh solid rgb(180, 45, 45);
-    
+    border: 6vh solid purple;
     right: 0;
-    margin-right: 1.6vh;
+    margin-right: 1vh;
     margin-top: 1vh;
 }
-
