--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $fifth: #381763;
 body {
     margin: 0;
     color: $primary;
-    font-family: '';
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
     h1 {
         font-size: 2em;
@@ -31,7 +31,6 @@ body {
     a {
         color: white;
         text-decoration: none;
-        background-color: $forth;
     }
 
     ul {
@@ -46,6 +45,7 @@ body {
 
         .logo {
             font-weight: bold;
+            background-color: $forth;
         }
 
         ul {
