--- a/css/coding.scss
+++ b/css/coding.scss
@@ -16,3 +16,33 @@ body{
     border-width: 1vh;
     box-sizing: content-box;
 }
+
+#display {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    border: solid;
+}
+
+#content {
+    margin: auto;
+}
+
+#cache {
+    font-size: 3vh;
+    text-align: right;
+    margin-right: 2vh;
+    margin-block-start: 1vh;
+    color: grey;
+}
+
+.grid-container {
+    margin: auto;
+    font-size: 10vh;
+    width: 5em;
+    height: 5em;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1px;
+    grid-auto-rows: minmax(1px, auto);
+    border: solid;
+  }
